--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -2,6 +2,8 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-y:hidden;
+    color: white;
 }
 
 #main {
@@ -23,3 +25,10 @@ html, body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+#gradient {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
